# miniz

./: .travis.yml  CMakeLists.txt  amalgamate.sh  test.sh
examples/: CMakeLists.txt
src/: miniz.h  miniz_zip.h
tests/: CMakeLists.txt
